{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 393,
  "lineage": "30ca179c-4a5e-ecab-da91-aa5b92b384b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "healthcare_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:route-table/rtb-098bdea3a9be871ba",
            "default_route_table_id": "rtb-098bdea3a9be871ba",
            "id": "rtb-098bdea3a9be871ba",
            "owner_id": "262510459367",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-007b25636a83ebf82",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthcare-route-table"
            },
            "tags_all": {
              "Name": "healthcare-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-063ced4c7f50af811"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.jonnys_tgw",
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "hub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:route-table/rtb-0bb3c99745685dec5",
            "default_route_table_id": "rtb-0bb3c99745685dec5",
            "id": "rtb-0bb3c99745685dec5",
            "owner_id": "262510459367",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0932d1f96c2bc580c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.1.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-007b25636a83ebf82",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.2.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-007b25636a83ebf82",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jonnys-hub-route-table"
            },
            "tags_all": {
              "Name": "jonnys-hub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b2fb468a9fb6f7f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.jonnys_tgw",
            "aws_internet_gateway.hub_igw",
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "novastream_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:route-table/rtb-07f3c750a83004e38",
            "default_route_table_id": "rtb-07f3c750a83004e38",
            "id": "rtb-07f3c750a83004e38",
            "owner_id": "262510459367",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-007b25636a83ebf82",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "novastream-route-table"
            },
            "tags_all": {
              "Name": "novastream-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-066b519970242fb44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.jonnys_tgw",
            "aws_vpc.novastream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "jonnys_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:262510459367:transit-gateway/tgw-007b25636a83ebf82",
            "association_default_route_table_id": "tgw-rtb-0efe06425aca47873",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Jonny's Main Router",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-007b25636a83ebf82",
            "multicast_support": "disable",
            "owner_id": "262510459367",
            "propagation_default_route_table_id": "tgw-rtb-0efe06425aca47873",
            "region": "us-east-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "Jonnys-Main-TGW"
            },
            "tags_all": {
              "Name": "Jonnys-Main-TGW"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-0efe06425aca47873_0.0.0.0/0",
            "region": "us-east-1",
            "transit_gateway_attachment_id": "tgw-attach-02e5d154df6d3081d",
            "transit_gateway_route_table_id": "tgw-rtb-0efe06425aca47873"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.jonnys_tgw",
            "aws_ec2_transit_gateway_vpc_attachment.jonnys_cable",
            "aws_subnet.hub_private",
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "healthcare_cable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:262510459367:transit-gateway-attachment/tgw-attach-0ba90999fe4141b07",
            "dns_support": "enable",
            "id": "tgw-attach-0ba90999fe4141b07",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0a11e51e504388d76"
            ],
            "tags": {
              "Name": "Healthcare-To_TGW"
            },
            "tags_all": {
              "Name": "Healthcare-To_TGW"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-007b25636a83ebf82",
            "vpc_id": "vpc-063ced4c7f50af811",
            "vpc_owner_id": "262510459367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.jonnys_tgw",
            "aws_subnet.healthcare_subnet",
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "jonnys_cable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:262510459367:transit-gateway-attachment/tgw-attach-02e5d154df6d3081d",
            "dns_support": "enable",
            "id": "tgw-attach-02e5d154df6d3081d",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0facc692a532dd10e"
            ],
            "tags": {
              "Name": "Hub-to-TGW-Attachement"
            },
            "tags_all": {
              "Name": "Hub-to-TGW-Attachement"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-007b25636a83ebf82",
            "vpc_id": "vpc-06b2fb468a9fb6f7f",
            "vpc_owner_id": "262510459367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.jonnys_tgw",
            "aws_subnet.hub_private",
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "novastream_cable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:262510459367:transit-gateway-attachment/tgw-attach-05fa8247dc42b98fb",
            "dns_support": "enable",
            "id": "tgw-attach-05fa8247dc42b98fb",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0a94e50f2f17f6381"
            ],
            "tags": {
              "Name": "Novastream-To_TGW"
            },
            "tags_all": {
              "Name": "Novastream-To_TGW"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-007b25636a83ebf82",
            "vpc_id": "vpc-066b519970242fb44",
            "vpc_owner_id": "262510459367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.jonnys_tgw",
            "aws_subnet.novastream_subnet",
            "aws_vpc.novastream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d53e963f15fbc83",
            "arn": "arn:aws:ec2:us-east-1:262510459367:elastic-ip/eipalloc-00d53e963f15fbc83",
            "association_id": "eipassoc-087dcba3006a73e74",
            "domain": "vpc",
            "id": "eipalloc-00d53e963f15fbc83",
            "instance": "i-0896c89ec436d5b9b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01999bec98e0ff6ab",
            "private_dns": "ip-10-0-1-162.ec2.internal",
            "private_ip": "10.0.1.162",
            "public_dns": "ec2-52-7-82-59.compute-1.amazonaws.com",
            "public_ip": "52.7.82.59",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "Jonnys-Bastion-EIP"
            },
            "tags_all": {
              "Name": "Jonnys-Bastion-EIP"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.bastion",
            "aws_key_pair.hub_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.hub_public",
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bba10c785df70bed",
            "arn": "arn:aws:ec2:us-east-1:262510459367:elastic-ip/eipalloc-0bba10c785df70bed",
            "association_id": "eipassoc-09bbcf626d56f06b7",
            "domain": "vpc",
            "id": "eipalloc-0bba10c785df70bed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02e5cb697e2ff1558",
            "private_dns": "ip-10-0-1-106.ec2.internal",
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-52-45-103-149.compute-1.amazonaws.com",
            "public_ip": "52.45.103.149",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "hub-nat-eip"
            },
            "tags_all": {
              "Name": "hub-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:262510459367:instance/i-0896c89ec436d5b9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jonnys-ec2-profile",
            "id": "i-0896c89ec436d5b9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jonnys-hub-key-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01999bec98e0ff6ab"
              }
            ],
            "primary_network_interface_id": "eni-01999bec98e0ff6ab",
            "private_dns": "ip-10-0-1-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.162",
            "public_dns": "ec2-52-7-82-59.compute-1.amazonaws.com",
            "public_ip": "52.7.82.59",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-033c8c6022451d5d5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03315fc49fde54439",
            "tags": {
              "Name": "Jonnys-Bastion-Host",
              "Role": "Bastion"
            },
            "tags_all": {
              "Name": "Jonnys-Bastion-Host",
              "Role": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ca3a41f3320c4e3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "i-0896c89ec436d5b9b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.hub_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.hub_public",
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "healthcare_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:262510459367:instance/i-009ebad40260ff1e2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jonnys-ec2-profile",
            "id": "i-009ebad40260ff1e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jonnys-hub-key-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c736b52240378f78"
              }
            ],
            "primary_network_interface_id": "eni-0c736b52240378f78",
            "private_dns": "ip-10-2-0-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.14",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01acc5b7a3b665258",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a11e51e504388d76",
            "tags": {
              "Name": "healthcare-server"
            },
            "tags_all": {
              "Name": "healthcare-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ffdc797f6008ebd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "i-009ebad40260ff1e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.hub_key",
            "aws_security_group.healthcare_sg",
            "aws_subnet.healthcare_subnet",
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "novastream_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:262510459367:instance/i-0cff4e55121f1adad",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jonnys-ec2-profile",
            "id": "i-0cff4e55121f1adad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jonnys-hub-key-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ab0a5786191a92b9"
              }
            ],
            "primary_network_interface_id": "eni-0ab0a5786191a92b9",
            "private_dns": "ip-10-1-0-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.14",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05643821c775b2d00",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a94e50f2f17f6381",
            "tags": {
              "Name": "novastream-static-webpage-server"
            },
            "tags_all": {
              "Name": "novastream-static-webpage-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-043b27a3227723ada"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "i-0cff4e55121f1adad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.hub_key",
            "aws_security_group.novastream_sg",
            "aws_subnet.novastream_subnet",
            "aws_vpc.novastream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hub_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:internet-gateway/igw-0932d1f96c2bc580c",
            "id": "igw-0932d1f96c2bc580c",
            "owner_id": "262510459367",
            "region": "us-east-1",
            "tags": {
              "Name": "Jonnys_Hub_IGW"
            },
            "tags_all": {
              "Name": "Jonnys_Hub_IGW"
            },
            "vpc_id": "vpc-06b2fb468a9fb6f7f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bba10c785df70bed",
            "association_id": "eipassoc-09bbcf626d56f06b7",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c026224277e4972a",
            "network_interface_id": "eni-02e5cb697e2ff1558",
            "private_ip": "10.0.1.106",
            "public_ip": "52.45.103.149",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03315fc49fde54439",
            "tags": {
              "Name": "hub-nat-gateway"
            },
            "tags_all": {
              "Name": "hub-nat-gateway"
            },
            "vpc_id": "vpc-06b2fb468a9fb6f7f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.hub_igw",
            "aws_subnet.hub_public",
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hub_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:route-table/rtb-044ff362da85bf376",
            "id": "rtb-044ff362da85bf376",
            "owner_id": "262510459367",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c026224277e4972a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-007b25636a83ebf82",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-007b25636a83ebf82",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-Tables-Nat-Gateway"
            },
            "tags_all": {
              "Name": "Route-Tables-Nat-Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b2fb468a9fb6f7f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "rtb-044ff362da85bf376",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.jonnys_tgw",
            "aws_eip.nat",
            "aws_internet_gateway.hub_igw",
            "aws_nat_gateway.hub",
            "aws_subnet.hub_public",
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hub_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08faabb2dd3ac38c5",
            "region": "us-east-1",
            "route_table_id": "rtb-044ff362da85bf376",
            "subnet_id": "subnet-0facc692a532dd10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.jonnys_tgw",
            "aws_eip.nat",
            "aws_internet_gateway.hub_igw",
            "aws_nat_gateway.hub",
            "aws_route_table.hub_private",
            "aws_subnet.hub_private",
            "aws_subnet.hub_public",
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:security-group/sg-07ca3a41f3320c4e3",
            "description": "Security group for bastion host -SSH access only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "alow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ca3a41f3320c4e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "24.62.156.61/32"
                ],
                "description": "SSH from my IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jonnys-bastion-sg",
            "name_prefix": "",
            "owner_id": "262510459367",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jonnys-Bastion-SG"
            },
            "tags_all": {
              "Name": "Jonnys-Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b2fb468a9fb6f7f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "sg-07ca3a41f3320c4e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "healthcare_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:security-group/sg-08ffdc797f6008ebd",
            "description": "security group for healthcare",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTP TLS - email sending",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              }
            ],
            "id": "sg-08ffdc797f6008ebd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "healthcare_sg",
            "name_prefix": "",
            "owner_id": "262510459367",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Healthcare-SG"
            },
            "tags_all": {
              "Name": "Healthcare-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-063ced4c7f50af811"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "sg-08ffdc797f6008ebd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "novastream_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:security-group/sg-043b27a3227723ada",
            "description": "Security group for novastream- SSH bastion only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTP TLS - email sending",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              }
            ],
            "id": "sg-043b27a3227723ada",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "novastream-sg",
            "name_prefix": "",
            "owner_id": "262510459367",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Novastream-SG"
            },
            "tags_all": {
              "Name": "Novastream-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-066b519970242fb44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "sg-043b27a3227723ada",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.novastream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "healthcare_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:subnet/subnet-0a11e51e504388d76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a11e51e504388d76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262510459367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Healthcare-Private-Subnet"
            },
            "tags_all": {
              "Name": "Healthcare-Private-Subnet"
            },
            "vpc_id": "vpc-063ced4c7f50af811"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "subnet-0a11e51e504388d76",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hub_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:subnet/subnet-0facc692a532dd10e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0facc692a532dd10e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262510459367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Jonnys-Hub-Private-Subnet"
            },
            "tags_all": {
              "Name": "Jonnys-Hub-Private-Subnet"
            },
            "vpc_id": "vpc-06b2fb468a9fb6f7f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "subnet-0facc692a532dd10e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hub_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:subnet/subnet-03315fc49fde54439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03315fc49fde54439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "262510459367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Jonnys-Hub-Public-Subnet"
            },
            "tags_all": {
              "Name": "Jonnys-Hub-Public-Subnet"
            },
            "vpc_id": "vpc-06b2fb468a9fb6f7f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "subnet-03315fc49fde54439",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jonnys_hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "novastream_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:subnet/subnet-0a94e50f2f17f6381",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a94e50f2f17f6381",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262510459367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "NovaStream-Private-Subnet"
            },
            "tags_all": {
              "Name": "NovaStream-Private-Subnet"
            },
            "vpc_id": "vpc-066b519970242fb44"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "subnet-0a94e50f2f17f6381",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.novastream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "healthcare_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:vpc/vpc-063ced4c7f50af811",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/24",
            "default_network_acl_id": "acl-0928f498bfd40f455",
            "default_route_table_id": "rtb-098bdea3a9be871ba",
            "default_security_group_id": "sg-07bbb34d1144bcccc",
            "dhcp_options_id": "dopt-07f49ce3a927b1226",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063ced4c7f50af811",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098bdea3a9be871ba",
            "owner_id": "262510459367",
            "region": "us-east-1",
            "tags": {
              "Name": "Healthcare-VPC"
            },
            "tags_all": {
              "Name": "Healthcare-VPC"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "vpc-063ced4c7f50af811",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jonnys_hub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:vpc/vpc-06b2fb468a9fb6f7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0835d51edb16c1c63",
            "default_route_table_id": "rtb-0bb3c99745685dec5",
            "default_security_group_id": "sg-01447ebf1b57670db",
            "dhcp_options_id": "dopt-07f49ce3a927b1226",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b2fb468a9fb6f7f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb3c99745685dec5",
            "owner_id": "262510459367",
            "region": "us-east-1",
            "tags": {
              "Name": "Jonnys-Hub"
            },
            "tags_all": {
              "Name": "Jonnys-Hub"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "vpc-06b2fb468a9fb6f7f",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "novastream_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262510459367:vpc/vpc-066b519970242fb44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/24",
            "default_network_acl_id": "acl-0dba88b9cf65b16a8",
            "default_route_table_id": "rtb-07f3c750a83004e38",
            "default_security_group_id": "sg-0d61663768783f87f",
            "dhcp_options_id": "dopt-07f49ce3a927b1226",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066b519970242fb44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f3c750a83004e38",
            "owner_id": "262510459367",
            "region": "us-east-1",
            "tags": {
              "Name": "NovaStream-VPC"
            },
            "tags_all": {
              "Name": "NovaStream-VPC"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262510459367",
            "id": "vpc-066b519970242fb44",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}